<resources>
    <string name="app_name">Shake &amp; Fidget Helper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">by Parsiphal</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_quests">Задания</string>
    <string name="nav_weapon">Оружие</string>
    <string name="nav_dungeon">Подземелья</string>
    <string name="nav_citadel">Крепость</string>
    <string name="nav_mirror">Зеркало</string>
    <string name="nav_pets">Питомцы</string>
    <string name="nav_unlocks">Возможности</string>
    <string name="hello_blank_fragment">В разработке</string>
    <string name="welcome">Добро пожаловать!</string>
    <!-- unlocks -->
    <string name="unlock_level_1">Уровень 1</string>
    <string name="unlock_level_1_1">Колесо удачи</string>
    <string name="unlock_level_1_2">Магазин оружия</string>
    <string name="unlock_level_1_3">Магический магазин</string>
    <string name="unlock_level_1_4">Конюшня</string>
    <string name="unlock_level_1_5">Таверна</string>
    <string name="unlock_level_1_6">Арена</string>
    <string name="unlock_level_1_7">Зал славы</string>
    <string name="unlock_level_1_8">Создание собственной гильдии</string>
    <string name="unlock_level_1_9">Городская вахта</string>
    <string name="unlock_level_1_10">Продавец грибов</string>
    <string name="unlock_level_10">Уровень 10</string>
    <string name="unlock_level_10_1">Ключ от первого подземелья</string>
    <string name="unlock_level_10_2">Альбом дотошности</string>
    <string name="unlock_level_10_3">Внутриигровая почта</string>
    <string name="unlock_level_20">Уровень 20</string>
    <string name="unlock_level_20_1">Ключ от второго подземелья</string>
    <string name="unlock_level_25">Уровень 25</string>
    <string name="unlock_level_25_1">Крепость</string>
    <string name="unlock_level_30">Уровень 30</string>
    <string name="unlock_level_30_1">Ключ от третьего подземелья</string>
    <string name="unlock_level_40">Уровень 40</string>
    <string name="unlock_level_40_1">Ключ от четвёртого подземелья</string>
    <string name="unlock_level_50">Уровень 50</string>
    <string name="unlock_level_50_1">Ключ от пятого подземелья</string>
    <string name="unlock_level_50_2">Осколки магического зеркала</string>
    <string name="unlock_level_66">Уровень 66</string>
    <string name="unlock_level_66_1">Ведьма</string>
    <string name="unlock_level_70">Уровень 70</string>
    <string name="unlock_level_70_1">Ключ от шестого подземелья</string>
    <string name="unlock_level_75">Уровень 75</string>
    <string name="unlock_level_75_1">Питомцы</string>
    <string name="unlock_level_80">Уровень 80</string>
    <string name="unlock_level_80_1">Ключ от седьмого подземелья</string>
    <string name="unlock_level_95">Уровень 95</string>
    <string name="unlock_level_95_1">Ключ от восьмого подземелья</string>
    <string name="unlock_level_99">Уровень 99</string>
    <string name="unlock_level_99_1">Порталы демонов: личный и гильдийский</string>
    <string name="unlock_level_100">Уровень 100</string>
    <string name="unlock_level_100_1">Ключ от туалета</string>
    <string name="unlock_level_110">Уровень 110</string>
    <string name="unlock_level_110_1">Ключ от девятого подземелья</string>
    <!-- quest -->
    <string name="quest_gold_text_view">Награда</string>
    <string name="quest_exp_text_view">Опыт</string>
    <string name="quest_time_text_view">Время\n(ММ:СС)</string>
    <string name="quest_quest1_text_view">Задание 1</string>
    <string name="quest_quest2_text_view">Задание 2</string>
    <string name="quest_quest3_text_view">Задание 3</string>
    <string name="quest_button">Просчитать</string>
    <string name="quest_double_dot">:</string>
    <string name="quest_gold">Золото</string>
    <string name="quest_exp">Опыт</string>
    <string name="quest_q_g_g">Золото</string>
    <string name="quest_q_g_s">Серебро</string>
    <string name="quest_q_t_m">ММ</string>
    <string name="quest_q_t_s">СС</string>
    <string name="quest_gold_g">\nЗ</string>
    <string name="quest_gold_s">\nС</string>
    <string name="quest_clear">Очистить</string>
    <string name="quest_best_for">\nЛучше для:</string>
    <string name="quest_all">Всё</string>
    <!-- weapon -->
    <string name="weapon_main_att">\nГлавный аттрибут</string>
    <string name="weapon_main_att_h">Главный аттрибут</string>
    <string name="weapon_min_damage">Оружие мин. повреждения</string>
    <string name="weapon_max_damage">Оружие макс. повреждения</string>
    <string name="weapon_att">Аттрибут на оружии</string>
    <string name="weapon_portal_bonus">\nБонус портала</string>
    <string name="weapon_portal_bonus_h">Бонус портала</string>
    <string name="weapon_1">Оружие 1</string>
    <string name="weapon_2">Оружие 2</string>
    <string name="weapon_damage">Урон</string>
    <!-- dungeon -->
    <string name="dungeon_1">Подземелье 1: Осквернённое подземелье</string>
    <string name="dungeon_2">Подземелье 2: Рудники славы</string>
    <string name="dungeon_3">Подземелье 3: Руины Гнарка</string>
    <string name="dungeon_4">Подземелье 4: Грот головорезов</string>
    <string name="dungeon_5">Подземелье 5: Алтарь изумрудной чешуи</string>
    <string name="dungeon_6">Подземелье 6: Больное дерево</string>
    <string name="dungeon_7">Подземелье 7: Поток магмы</string>
    <string name="dungeon_8">Подземелье 8: Храм ледяной крови</string>
    <string name="dungeon_9">Подземелье 9: Пирамида безумия</string>
    <string name="dungeon_10">Подземелье 10: Крепость Чёрного черепа</string>
    <string name="dungeon_11">Подземелье 11: Цирк ужасов</string>
    <string name="dungeon_12">Подземелье 12: Ад</string>
    <string name="dungeon_13">Подземелье 13: 13-ый этаж</string>
    <string name="dungeon_14">Подземелье 14: Истерос</string>
    <string name="dungeon_15">Подземелье 15: Башня?</string>
    <string name="dungeon_16">Подземелье 16: Респектабельная школа магии</string>
    <string name="dungeon_17">Подземелье 17: Hemorridor</string>
    <string name="dungeon_stage_number">Этаж: {0}</string>
    <string name="dungeon_enemy_name">Имя: {0}</string>
    <string name="dungeon_level">Уровень: {0}</string>
    <string name="dungeon_class">Класс: {0}</string>
    <string name="dungeon_health">Здор: {0}</string>
    <string name="dungeon_strength">Сил: {0}</string>
    <string name="dungeon_agility">Лов: {0}</string>
    <string name="dungeon_intellegence">Ум: {0}</string>
    <string name="dungeon_vitality">Вын: {0}</string>
    <string name="dungeon_luck">Удч: {0}</string>
    <string name="dungeon_experience">Опыт: {0}</string>
    <string name="nav_options">Настройки</string>
    <string name="download_db">Скачать БД</string>
    <string name="DB_downloading">Скачивание БД</string>
    <string name="error">Ошибка</string>
    <string name="DB_imported">БД импортирована</string>


</resources>
