<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.UnlockFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_1"/>


            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_1"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_2"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_3"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_4"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_5"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_6"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_7"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_8"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_9"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_1_10"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_10"/>


            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_10_1"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_10_2"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_10_3"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_20"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_20_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_25"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_25_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_30"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_30_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_40"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_40_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_50"/>


            <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_50_1"/>
                <TextView
                        style="@style/unlockTextContent"
                        android:text="@string/unlock_level_50_2"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_66"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_66_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_70"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_70_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_75"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_75_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_80"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_80_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_95"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_95_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_99"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_99_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_100"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_100_1"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"></LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    style="@style/unlockTextLevel"
                    android:text="@string/unlock_level_110"/>

            <TextView
                    style="@style/unlockTextContent"
                    android:text="@string/unlock_level_110_1"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>